--- a/src/main/resources/br/com/washii/style/tema-claro.css
+++ b/src/main/resources/br/com/washii/style/tema-claro.css
@@ -4,7 +4,7 @@
 */
 
 .root {
-    /* Paleta de Cores para Modo Claro */
+    /* EXEMPLO Paleta de Cores para Modo Claro */
     -cor-fundo-principal: #F4F4F4;
     -cor-fundo-card: #FFFFFF;
     -cor-texto-padrao: #333333;
