--- a/src/main/resources/br/com/washii/feature/teste/main.fxml
+++ b/src/main/resources/br/com/washii/feature/teste/main.fxml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml" 
-            fx:controller="br.com.washii.feature.teste.MainController"
-            prefHeight="400" prefWidth="600">
-    
+<BorderPane prefHeight="400" prefWidth="600"
+            styleClass="main-container"
+            xmlns:fx="http://javafx.com/fxml/1"
+            xmlns="http://javafx.com/javafx/17.0.12"
+            fx:controller="br.com.washii.feature.teste.MainController">
+
     <left>
-        <VBox spacing="10" style="-fx-background-color: #333; -fx-padding: 10;">
-            <Label text="WASHII" style="-fx-text-fill: white; -fx-font-weight: bold;"/>
-            <Button text="Ir para Tela A" onAction="#abrirTelaA"/>
-            <Button text="Ir para Tela B" onAction="#abrirTelaB"/>
+        <VBox spacing="10" styleClass="sidebar">
+            <Label styleClass="logo-label" text="WASHII" />
+            <Button onAction="#abrirTelaA" text="Ir para Tela A" styleClass="nav-button" />
+            <Button onAction="#abrirTelaB" text="Ir para Tela B" styleClass="nav-button" />
         </VBox>
     </left>
 
     <center>
-        <StackPane fx:id="contentArea" style="-fx-background-color: #eee;">
-            <Label text="Bem-vindo ao Washii!"/>
+        <StackPane fx:id="contentArea" styleClass="content-pane">
+            <Label styleClass="welcome-label" text="Bem-vindo ao Washii!" />
         </StackPane>
     </center>
 </BorderPane>
