--- a/src/main/resources/br/com/washii/feature/teste/teste2.fxml
+++ b/src/main/resources/br/com/washii/feature/teste/teste2.fxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: blue;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.feature.teste.Teste2Controller">
+<StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: blue;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.feature.teste.Teste2Controller">
    <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
       <children>
           <Label text="TELA 2 (DASHBOARD) FUNCIONANDO" textFill="white" />
          <Button mnemonicParsing="false" onAction="#onClick" text="Button" />
+         <Button mnemonicParsing="false" onAction="#onClick2" text="Button" />
       </children>
    </VBox>
 </StackPane>
