--- a/src/main/resources/br/com/washii/view/teste/teste1.fxml
+++ b/src/main/resources/br/com/washii/view/teste/teste1.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.Label?>
 
 <StackPane xmlns:fx="http://javafx.com/fxml" 
-           fx:controller="br.com.washii.feature.teste.Teste1Controller" 
+           fx:controller="br.com.washii.presentation.teste.Teste1Controller" 
            prefHeight="200" prefWidth="200" style="-fx-background-color: red;">
     <Label text="TELA 1 (LOGIN) FUNCIONANDO" textFill="white"/>
 </StackPane>
