--- a/src/main/resources/br/com/washii/view/teste/teste2.fxml
+++ b/src/main/resources/br/com/washii/view/teste/teste2.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: blue;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.feature.teste.Teste2Controller">
+<StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: blue;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.teste.Teste2Controller">
    <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
       <children>
           <Label text="TELA 2 (DASHBOARD) FUNCIONANDO" textFill="white" />
