Definido a paleta de cores para versão clara e escura

--- a/src/main/resources/br/com/washii/style/base.css
+++ b/src/main/resources/br/com/washii/style/base.css
@@ -1,6 +1,7 @@
 /* FUNÇÃO: Estrutura e Layout Permanente.
    ATRIBUIÇÕES: Definição de fontes, arredondamento de bordas (radius),
    espessamentos, margens e tamanhos fixos que não mudam com o tema.
+   Seletores de tipo
 */
 
 .root {
