--- a/src/main/resources/br/com/washii/style/components.css
+++ b/src/main/resources/br/com/washii/style/components.css
@@ -1,6 +1,7 @@
 /* FUNÇÃO: Estilização dos Componentes JavaFX.
    ATRIBUIÇÕES: Aplica as variáveis de cores nos componentes reais e outros efeitos visuais.
    Consome as variáveis definidas nos arquivos de tema.
+   Seletores de classe
 */
 
 /* EXEMPLO Estilização Base baseada nas variáveis do .root */
