--- a/src/main/resources/br/com/washii/view/login/login.fxml
+++ b/src/main/resources/br/com/washii/view/login/login.fxml
@@ -1,33 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<BorderPane id="login-background" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.loscar.controller.LoginController">
+<BorderPane minHeight="450.0" minWidth="400.0" prefHeight="600.0" prefWidth="800.0" styleClass="main-container-login" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.login.LoginController">
     <center>
-        <VBox id="login-content" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" spacing="20.0" BorderPane.alignment="CENTER">
+        <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="400.0" prefWidth="450.0" spacing="20.0" styleClass="login-content" BorderPane.alignment="CENTER">
             <children>
             <VBox alignment="CENTER">
                <children>
-                      <ImageView fitHeight="139.0" fitWidth="140.0" pickOnBounds="true" preserveRatio="true">
+                      <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                           <image>
-                              <Image url="@../../assets/logos/lg-washii-blue.png" />
+                              <Image url="@../../assets/logos/lg-washii-blue-128.png" />
                           </image>
                       </ImageView>
-                  <Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="WASHII">
+                  <Label alignment="CENTER" maxWidth="1.7976931348623157E308" styleClass="logo-label" text="Washii">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
                </children>
             </VBox>
-            <HBox alignment="CENTER">
+            <HBox alignment="CENTER" styleClass="input-conteiner">
                <children>
-                  <ImageView pickOnBounds="true" preserveRatio="true" />
-                      <TextField id="input-email" fx:id="txtEmail" onKeyReleased="#onKeyReleased" promptText="E-mail" styleClass="input" HBox.hgrow="ALWAYS">
+                  <FontIcon iconLiteral="mdi2e-email" selectionEnd="0" styleClass="icon-login" />
+                  
+                      <TextField fx:id="txtEmail" promptText="E-mail" styleClass="input-invisivel" HBox.hgrow="ALWAYS">
                           <padding>
                               <Insets bottom="5.0" left="10.0" right="5.0" top="5.0" />
                           </padding>
@@ -37,22 +49,28 @@
                   </TextField>
                </children>
             </HBox>
-                <PasswordField id="input-senha" fx:id="pwdSenha" onKeyReleased="#onKeyReleased" promptText="Senha" styleClass="input">
-                    <padding>
-                        <Insets bottom="5.0" left="10.0" right="5.0" top="5.0" />
-                    </padding>
-                    <font>
-                        <Font size="14.0" />
-                    </font>
-                </PasswordField>
+            <HBox alignment="CENTER" styleClass="input-conteiner" VBox.vgrow="NEVER">
+               <children>
+                  <FontIcon iconLiteral="mdi2l-lock" styleClass="icon-login" />
+                 
+                      <PasswordField fx:id="pwdSenha" promptText="Senha" styleClass="input-invisivel" HBox.hgrow="ALWAYS">
+                          <padding>
+                              <Insets bottom="5.0" left="10.0" right="5.0" top="5.0" />
+                          </padding>
+                          <font>
+                              <Font size="14.0" />
+                          </font>
+                      </PasswordField>
+               </children>
+            </HBox>
                 <HBox maxWidth="-Infinity" prefHeight="24.0" prefWidth="400.0">
                     <children>
-                        <Label fx:id="lblMsgErro" text="Mensagem de erro" textFill="#ef5350" underline="true" visible="false" />
+                        <Label fx:id="lblMsgErro" maxHeight="1.7976931348623157E308" text="Mensagem de erro" textFill="#ef5350" underline="true" visible="false" />
                         <Region HBox.hgrow="SOMETIMES" />
                         <Hyperlink fx:id="lnkEsqueciSenha" text="Esqueci a senha" />
                     </children>
                 </HBox>
-                <Button id="btn-enviar" fx:id="btnEnviar" mnemonicParsing="false" onAction="#onBtnEnviarClick" text="ENTRAR" textFill="WHITE">
+                <Button id="btn-enviar" mnemonicParsing="false" onAction="#onEntrar" styleClass="button-primary" text="ENTRAR" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="16.0" />
                     </font></Button>
@@ -65,6 +83,9 @@
                     </children>
                 </HBox>
             </children>
+         <padding>
+            <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
+         </padding>
         </VBox>
     </center>
     <padding>
@@ -73,8 +94,11 @@
     <bottom>
         <Label text="Washii © 2025 - Facilitando a sua vida" textFill="WHITE" BorderPane.alignment="CENTER">
             <font>
-                <Font size="14.0" />
+                <Font name="DejaVu Sans Condensed Bold" size="14.0" />
             </font>
+         <cursor>
+            <Cursor fx:constant="NONE" />
+         </cursor>
         </Label>
     </bottom>
 </BorderPane>
