--- a/src/main/resources/br/com/washii/view/login/login.fxml
+++ b/src/main/resources/br/com/washii/view/login/login.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
@@ -17,11 +18,11 @@
 <?import javafx.scene.text.Font?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<BorderPane minHeight="450.0" minWidth="400.0" prefHeight="600.0" prefWidth="800.0" styleClass="main-container-login" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.login.LoginController">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="800.0" styleClass="main-background" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.login.LoginController">
     <center>
-        <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="400.0" prefWidth="450.0" spacing="20.0" styleClass="login-content" BorderPane.alignment="CENTER">
+        <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="350.0" prefWidth="450.0" spacing="20.0" styleClass="login-content" BorderPane.alignment="CENTER">
             <children>
-            <VBox alignment="CENTER">
+            <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308">
                <children>
                       <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                           <image>
@@ -37,7 +38,11 @@
             </VBox>
             <HBox alignment="CENTER" styleClass="input-conteiner">
                <children>
-                  <FontIcon iconLiteral="mdi2e-email" selectionEnd="0" styleClass="icon-login" />
+                  <FontIcon iconLiteral="mdi2e-email" selectionEnd="0">
+                     <styleClass>
+                        <String fx:value="icon-login" />
+                        <String fx:value="icon" />
+                     </styleClass></FontIcon>
                   
                       <TextField fx:id="txtEmail" promptText="E-mail" styleClass="input-invisivel" HBox.hgrow="ALWAYS">
                           <padding>
@@ -51,7 +56,11 @@
             </HBox>
             <HBox alignment="CENTER" styleClass="input-conteiner" VBox.vgrow="NEVER">
                <children>
-                  <FontIcon iconLiteral="mdi2l-lock" styleClass="icon-login" />
+                  <FontIcon iconLiteral="mdi2l-lock">
+                     <styleClass>
+                        <String fx:value="icon-login" />
+                        <String fx:value="icon" />
+                     </styleClass></FontIcon>
                  
                       <PasswordField fx:id="pwdSenha" promptText="Senha" styleClass="input-invisivel" HBox.hgrow="ALWAYS">
                           <padding>
@@ -70,10 +79,13 @@
                         <Hyperlink fx:id="lnkEsqueciSenha" text="Esqueci a senha" />
                     </children>
                 </HBox>
-                <Button id="btn-enviar" mnemonicParsing="false" onAction="#onEntrar" styleClass="button-primary" text="ENTRAR" textFill="WHITE">
+                <Button mnemonicParsing="false" onAction="#onEntrar" styleClass="button-primary" text="ENTRAR" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="16.0" />
-                    </font></Button>
+                    </font>
+               <padding>
+                  <Insets bottom="5.0" left="50.0" right="50.0" top="5.0" />
+               </padding></Button>
                 <Separator prefWidth="200.0" />
                 <HBox alignment="CENTER_LEFT" prefHeight="0.0" prefWidth="400.0">
                     <children>
