--- a/src/main/resources/br/com/washii/view/home/main-layout-cliente.fxml
+++ b/src/main/resources/br/com/washii/view/home/main-layout-cliente.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="800.0" styleClass="main-background" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.home.MainLayoutController">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="800.0" styleClass="main-background" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.home.MainLayoutClienteController">
    <top>
       <HBox alignment="CENTER" prefHeight="32.0" spacing="10.0" styleClass="header" BorderPane.alignment="CENTER">
          <children>
