--- a/src/main/resources/br/com/washii/view/login/login.fxml
+++ b/src/main/resources/br/com/washii/view/login/login.fxml
@@ -98,6 +98,9 @@
          <padding>
             <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
          </padding>
+         <BorderPane.margin>
+            <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin>
         </VBox>
     </center>
     <padding>
