--- a/src/main/resources/br/com/washii/view/home/main-layout-cliente.fxml
+++ b/src/main/resources/br/com/washii/view/home/main-layout-cliente.fxml
@@ -98,10 +98,13 @@
                </padding>
             </HBox>
             <Region VBox.vgrow="ALWAYS" />
-            <Button mnemonicParsing="false" styleClass="sistem-button" text="Sair" textFill="#3e9bb5">
+            <Button mnemonicParsing="false" onAction="#onSair" styleClass="button-secondary" text="Sair" textFill="#3e9bb5">
                <font>
                   <Font name="System Bold" size="13.0" />
-               </font></Button>
+               </font>
+               <padding>
+                  <Insets bottom="1.0" left="20.0" right="20.0" top="1.0" />
+               </padding></Button>
          </children></VBox>
    </left>
    <center>
