feat: implement layout controllers for cliente and negocio, update service factory, and enhance error handling

--- a/src/main/resources/br/com/washii/style/global.css
+++ b/src/main/resources/br/com/washii/style/global.css
@@ -120,3 +120,8 @@ O QUE NÃO COLOCAR AQUI:
     -fx-fill: -color-danger; /* No componente Text, usa-se -fx-fill em vez de -fx-text-fill */
     -fx-font-size: 14px;
 }
+
+.success-container Text {
+    -fx-fill: -color-success;
+    -fx-font-size: 14px;
+}
