--- a/src/main/resources/br/com/washii/view/servico/gestao-servicos.fxml
+++ b/src/main/resources/br/com/washii/view/servico/gestao-servicos.fxml
@@ -85,8 +85,8 @@
                               <HBox alignment="CENTER_RIGHT" spacing="15.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
                                  <children>
                                     <TextFlow fx:id="avisoContainer" visible="false" HBox.hgrow="ALWAYS" />
-                                    <Button mnemonicParsing="false" onAction="#onLimpar" prefHeight="30.0" text="Limpar" />
-                                    <Button mnemonicParsing="false" onAction="#onAdicionarServico" prefHeight="30.0" prefWidth="180.0" text="Adicionar Serviço" />
+                                    <Button mnemonicParsing="false" onAction="#onLimpar" prefHeight="30.0" prefWidth="100.0" styleClass="button-secondary" text="Limpar" />
+                                    <Button mnemonicParsing="false" onAction="#onAdicionarServico" prefHeight="30.0" prefWidth="150.0" styleClass="button-primary" text="Adicionar" />
                                  </children>
                               </HBox>
                            </children>
@@ -109,7 +109,7 @@
                             <TableColumn fx:id="colNome" prefWidth="200.0" text="Serviço" />
                             <TableColumn fx:id="colCategoria" prefWidth="150.0" text="Categoria" />
                             <TableColumn fx:id="colPreco" prefWidth="100.0" text="Preço" />
-                            <TableColumn fx:id="colDescricao" prefWidth="250.0" text="Descrição" />
+                            <TableColumn fx:id="colDescricao" maxWidth="-1.0" prefWidth="-1.0" text="Descrição" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
