--- a/src/main/resources/br/com/washii/style/tema-claro.css
+++ b/src/main/resources/br/com/washii/style/tema-claro.css
@@ -20,6 +20,6 @@
     
     /* Status */
     -color-success: #4CAF50;
-    -color-warning: #FFC107;
+    -color-warning: #FFB74D;
     -color-danger: #EF5350;
 }
