--- a/src/main/resources/br/com/washii/view/layout/cliente-layout.fxml
+++ b/src/main/resources/br/com/washii/view/layout/cliente-layout.fxml
@@ -108,10 +108,6 @@
          </children></VBox>
    </left>
    <center>
-      <Label text="DASHBOARD" BorderPane.alignment="CENTER">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
+      <fx:include fx:id="homeinitialize" source="../homescene/home-tela.fxml"/>
    </center>
 </BorderPane>
